# ADS-7

include/: train.h
src/: CMakeLists.txt  main.cpp  train.cpp
test/: AllTests.cpp  tests.cpp
